--- a/en/_posts/2023-11-23-laptop.md
+++ b/en/_posts/2023-11-23-laptop.md
@@ -58,7 +58,7 @@ In 2005 I got married and together with my wife we moved to Brussels, Belgium wh
 
 Here's our apartment and my "home office" with additional accessories like a special docking station for the M200, external DVD drive and printer. This is where I built the first version of [Nozbe][n] just for myself in PHP and MySQL. Little did I know that it'll become my main business in just few years.
 
-![{{ page.title }} honeymooon](/img/laptop-honeymooon.jpg)
+![{{ page.title }} honeymooon](/img/laptop-honeymoon.jpg)
 
 My wife really appreciated the form factor and the touch screen of this small and cute Fujitsu laptop machine.
 
@@ -136,7 +136,7 @@ I coded the whole Japanese [Public Nozbe](/publicnozbe-simply-help-someone-in-ja
 
 ![{{ page.title }} standup](/img/laptop-standup.jpg)
 
-…I this is when I started [working standing](https://michael.team/im-still-standing-my-latest-video-show/).
+…this is when I started [working standing](https://michael.team/im-still-standing-my-latest-video-show/).
 
 ## 9. MacBook Pro 13" in 2013
 
