Action button posts

--- a/pl/_posts/2022-04-22-czytanie.md
+++ b/pl/_posts/2022-04-22-czytanie.md
@@ -1,6 +1,8 @@
 ---
 tags: [zycie]
 img: "czytanie.jpg"
+redirect_from:
+- /czytanie/
 ---
 
 # Czytanie na dziś jako skrót Siri na iPhone, iPad lub Mac
