chiron and lego updates

--- a/en/_posts/2021-03-06-yoda.md
+++ b/en/_posts/2021-03-06-yoda.md
@@ -5,7 +5,7 @@ cover: "yoda.jpg"
 
 # Building Lego Baby Yoda
 
-I grew up as a [Star Wars](https://en.wikipedia.org/wiki/Star_Wars) fan. I always admired Jedi knights and especially their [Jedi Master Yoda](https://en.wikipedia.org/wiki/Yoda). So when I got Disney+ for my kids and realized there was a new series from the Star Wars universe called [The Mandalorian](https://en.wikipedia.org/wiki/The_Mandalorian) featuring a ["Baby Yoda" character](https://en.wikipedia.org/wiki/Grogu) I had to watch it. I loved it. So this past Christmas I doubled-down on my childhood memories and got a LEGO set featuring this cute character.
+I grew up as a [Star Wars](https://en.wikipedia.org/wiki/Star_Wars) fan. I always admired Jedi knights and especially their [Jedi Master Yoda](https://en.wikipedia.org/wiki/Yoda). So when I got Disney+ for my kids and realized there was a new series from the Star Wars universe called [The Mandalorian](https://en.wikipedia.org/wiki/The_Mandalorian) featuring a ["Baby Yoda" character](https://en.wikipedia.org/wiki/Grogu) I had to watch it. I loved it. So this past Christmas I doubled-down on my childhood memories and got a [LEGO set "The Child"](https://www.lego.com/en-us/product/the-child-75318) featuring this cute character made out of **1075** pieces.
 
 <!--More-->
 
@@ -62,7 +62,7 @@ To remind me of these words of wisdom, the old Yoda Master and the Star Wars uni
 
 ![{{ page.title }} 7](/img/yoda-7.jpg)
 
-After this last step I finished everything and now I have a cute "Baby Yoda" next to my main desk in my [home office](/office) and I think it's looking great!
+After this last step I finished everything [on January 12](https://www.instagram.com/p/CJ8QbHiHCBg/) and now I have a cute "Baby Yoda" next to my main desk in my [home office](/office) and I think it's looking great!
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
