--- a/en/_posts/2022-10-04-mclaren.md
+++ b/en/_posts/2022-10-04-mclaren.md
@@ -1,11 +1,11 @@
 ---
-tags: [life, lego]
+tags: [lego]
 cover: "mclaren.jpg"
 ---
 
 # Building lego McLaren F1 car
 
-I’m a big fan of LEGO bricks and on this blog I’ve already shared how I built a [Lego Baby Yoda](/yoda) and [other Lego sets](/lego/). Building Lego bricks brings me joy. That’s why I decided today and in the future to share with you the process of building Lego and hopefully spread the joy to you even more. Recently I built the [McLaren Formula 1™ Race Car](https://www.lego.com/en-us/product/mclaren-formula-1-race-car-42141) car and it’s stunning:
+I’m a big fan of LEGO bricks and on this blog I’ve already shared how I built a [Lego Baby Yoda](/yoda) and [other Lego sets](/lego/). Building Lego bricks brings me joy. That’s why I decided today and in the future to share with you the process of building Lego and hopefully spread the joy to you even more. Recently I built the [McLaren Formula 1™ Race Car](https://www.lego.com/en-us/product/mclaren-formula-1-race-car-42141) car made out of **1434** pieces and it’s stunning:
 
 <!--More-->
 
