--- a/en/_posts/2022-11-11-gt3.md
+++ b/en/_posts/2022-11-11-gt3.md
@@ -1,11 +1,11 @@
 ---
-tags: [life, lego]
+tags: [lego]
 cover: "gt3.jpg"
 ---
 
 # Porsche 911 GT3 RS - why building Lego sets is so much fun!
 
-A few years ago I got myself a glorious [Porsche 911 GT3 RS][l] Lego set for Christmas and [I posted about it on my Instagram](https://www.instagram.com/p/BQBEBnpFxUr/?igshid=YmMyMTA2M2Y=) but never here on my blog. [I’m a huge Lego fan](/lego/) and building physical objects out of these bricks is my way of doing something creative without looking at an [iPad screen](/ipadonly) and relaxes me after a whole day of working on [Nozbe][n]. And gives me a chance to reconnect with friends. Here’s how I built my dream [Porsche 911 GT3 RS](https://en.wikipedia.org/wiki/Porsche_911_GT3) out of Lego bricks back during the 2016/2017 Christmas season:
+A few years ago I got myself a glorious [Porsche 911 GT3 RS][l] Lego set for Christmas and [I posted about it on my Instagram](https://www.instagram.com/p/BQBEBnpFxUr/?igshid=YmMyMTA2M2Y=) but never here on my blog. [I’m a huge Lego fan](/lego/) and building physical objects out of these bricks is my way of doing something creative without looking at an [iPad screen](/ipadonly) and relaxes me after a whole day of working on [Nozbe][n]. And gives me a chance to reconnect with friends. Here’s how I built my dream [Porsche 911 GT3 RS](https://en.wikipedia.org/wiki/Porsche_911_GT3) out of [Lego bricks](https://www.lego.com/en-us/product/porsche-911-gt3-rs-42056) (all **2704** of them!) back during the [2016](/2016) Christmas season:
 
 <!--More-->
 
