--- a/en/_posts/2022-12-13-porsche.md
+++ b/en/_posts/2022-12-13-porsche.md
@@ -1,11 +1,11 @@
 ---
-tags: [life, lego]
+tags: [lego]
 cover: "porsche.jpg"
 ---
 
 # Another Porsche LEGO set - building the 911 RSR
 
-After my success with [Porsche GT3 RS](/gt3) I decided to add another, a little smaller and less complicated, yet still cool Porsche lego set - the [Porsche 911 RSR](https://www.lego.com/en-us/product/porsche-911-rsr-42096) which I got myself for Christmas [2020](/2020) - to basically cheer myself up in the middle of the [Covid](/covid) pandemic. Here's how the build process went down:
+After my success with [Porsche GT3 RS](/gt3) I decided to add another, a little smaller and less complicated, yet still cool Porsche lego set - the [Porsche 911 RSR](https://www.lego.com/en-us/product/porsche-911-rsr-42096) made of **1580 pieces** based on the [real race car (991 version)](https://en.wikipedia.org/wiki/Porsche_911_RSR) which I got myself for Christmas [2020](/2020/) - to basically cheer myself up in the middle of the [Covid](/covid) pandemic. Here's how the build process went down:
 
 <!--More-->
 
@@ -50,7 +50,7 @@ Then go the headlights and more details:
 
 ## Final Step - find a place to put it!
 
-Here's the finished car next to my other lego sets:
+Here's the finished car [on January 30](https://www.instagram.com/p/CKrUVrtn4ia) next to my other lego sets:
 
 ![{{ page.title }} 8](/img/porsche-8.jpg)
 
