--- a/en/_posts/2023-11-28-action.md
+++ b/en/_posts/2023-11-28-action.md
@@ -51,6 +51,8 @@ I decided to put [add task to Nozbe via API Shortcut][na] so that I can quickly 
 
 As a [triathlete](/tri15/) and [tennis player](/tennis/) I added my favorite workouts in that order: walk, run, cycle, tennis and swim. This way my muscle memory always knows where to find my favorite workouts!
 
+**Update as of December 2023**: I've prepared a special [Watchnote - Siri Shortcut to be able to add a note on the Apple Watch](/watchnote/) and I've added it my *Action Button menu* on both Watch and iPhone.
+
 ### iPhone 15 Pro menu: Nozbe (duh!), Journaling and more!
 
 On the iPhone my menu first has the Camera app - so I can quickly take a picture or a selfie. These are actually two separate menu items. Later I added the following shortcuts:
