--- a/en/_posts/2023-12-13-smsnote.md
+++ b/en/_posts/2023-12-13-smsnote.md
@@ -11,7 +11,7 @@ Last week I posted [a very geeky way to add notes to the Apple Watch](/watchnote
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
-## ## Send iMessages to yourself - just like adding notes to self
+## Send iMessages to yourself - just like adding notes to self
 
 The idea is that you can create a Siri Shortcut where you can send an iMessage to yourself and later open these messages - even on an [Apple Watch](/applewatch) without the [iPhone](/iphone) connected. Here’s the Siri Shortcut:
 
