task nozbe new shortcut

--- a/en/_posts/2023-11-27-nozbe-add.md
+++ b/en/_posts/2023-11-27-nozbe-add.md
@@ -49,13 +49,16 @@ To use the API, you need to generate a unique **API Token** and copy it to clipb
 
 Even if you're not a programmer you can get my Siri Shortcut and paste your API token there. Now you'll be able to add tasks to Nozbe with this shortcut from all of your Apple devices. Even from the Apple Watch ⌚️!
 
-### [To-do Nozbe Shortcut][t]
+### [Nozbe Task Shortcut][t]
 
 ![{{ page.title }} watch](/img/nozbe-add-watch.jpg)
 
-In the following posts I'll show you how I use the "Action Button" on my [Apple Watch Ultra 2](/ultra) to be able to add a task to [Nozbe][n] directly using the Action button!
+In the [following post I show you how I use the "Action Button"](/action/) on my [Apple Watch Ultra 2](/ultra) to be able to add a task to [Nozbe][n] directly using the Action button!
 
-[t]: https://www.icloud.com/shortcuts/c99c26476d57490a89b1a813bc325e5f
+P.S. Many thanks to my Nozbe colleagues - Jarek and Mijam, for improving the API and this Siri Shortcut.
+
+[t]: https://www.icloud.com/shortcuts/fc74afaf53dd41f0ad86d3706e1fd58b
+[t1]: https://www.icloud.com/shortcuts/c99c26476d57490a89b1a813bc325e5f
 [te]: https://www.icloud.com/shortcuts/b278f168fff14a6b9b7cb293faa31f6b
 [e]: https://nozbe.help/taskcommunication/email-tasks/
 [a]: https://nozbe.help/advancedfeatures/api/
