fixes for watch

--- a/en/_posts/2023-11-27-nozbe-add.md
+++ b/en/_posts/2023-11-27-nozbe-add.md
@@ -45,11 +45,11 @@ For more professional integrations, we have a comprehensive [Nozbe API][a]. This
 
 ![{{ page.title }} api](/img/nozbe-add-api.jpg)
 
-To use the API, you need to generate a unique **API Token** and copy it to clipboard but don't share it with anyone as it could give them access to your Nozbe account.
+To use the API, you need to generate a unique **API Token** (go to `Settings in Nozbe > “API Tokens”`) and copy it to clipboard but don't share it with anyone as it could give them access to your Nozbe account.
 
 Even if you're not a programmer you can get my Siri Shortcut and paste your API token there. Now you'll be able to add tasks to Nozbe with this shortcut from all of your Apple devices. Even from the Apple Watch ⌚️!
 
-### [Nozbe Task Shortcut][t]
+### [✅ To-do Nozbe Shortcut][t]
 
 ![{{ page.title }} watch](/img/nozbe-add-watch.jpg)
 
@@ -57,7 +57,7 @@ In the [following post I show you how I use the "Action Button"](/action/) on my
 
 P.S. Many thanks to my Nozbe colleagues - Jarek and Mijam, for improving the API and this Siri Shortcut.
 
-[t]: https://www.icloud.com/shortcuts/fc74afaf53dd41f0ad86d3706e1fd58b
+[t]: https://www.icloud.com/shortcuts/8c972184156c4b2c8a6c9cc5bb4123e3
 [t1]: https://www.icloud.com/shortcuts/c99c26476d57490a89b1a813bc325e5f
 [te]: https://www.icloud.com/shortcuts/b278f168fff14a6b9b7cb293faa31f6b
 [e]: https://nozbe.help/taskcommunication/email-tasks/
