--- a/en/_posts/2023-12-21-day1.md
+++ b/en/_posts/2023-12-21-day1.md
@@ -3,7 +3,7 @@ tags: [business,featured,video]
 cover: "day1.jpg"
 ---
 
-# Jeff Bezos and Day 1 thinking and truth telling
+# Jeff Bezos and Day 1 thinking and truth seeking
 
 Recently I've listened to [Lex Friedman interviewing Jeff Bezos](https://youtube.com/watch?v=DcWqzZ3I2cY){:target='_blank'} and I have a few notes that stuck with me, specifically about his *Day 1* mentality.
 
@@ -52,7 +52,7 @@ Sometimes the metrics are no longer relevant. Or are not indicating what's reall
 
 You have to use metrics but if you're using metrics you don't really understand, you're slipping into Day 2 thinking.
 
-## Truth telling - build a culture that supports that!
+## Truth seeking - build a culture that supports that!
 
 Humans are social animals. They are not inherently truth-seeking creatures because truths can be painful, awkward, challenging or inconvenient.
 
@@ -68,11 +68,19 @@ Jeff says he always speaks last. I have to be mindful of that. I don't speak las
 
 Data or hunch - because sometimes we feel something's not right. We don't have data yet, but we want to see, because something feels off. And we should have a space to check it out.
 
+This is when "disagree and commit" comes in. Very often you might disagree but you want to move forward so you commit to the new decision and see where it takes you.
+
 > If there are two interpretations of a new set of data, and one of them is happy, and the other one is not, it's good to be skeptical about the happy version. It might be good, but I'm gonna go with the "it's bad" for now until we're sure.
 
 He quotes a story that encapsulates all of the above. In Amazon they had a metric that said that people on average didn't have to wait long for a customer support rep to pick up the call. But they had a feeling that the metric wasn't really reflecting the truth because customers kept complaining about it. So when they had their WBR (Weekly Business Review) meeting, Jeff told them to place a call right then. And they did, and there was an awkward wait for 10 minutes that drove the point home.
 
 > When the data and anecdotes disagree, the anecdotes are usually right.
+
+## Compromise is lazy
+
+Instead of compromising, seek the truth. Find out what's really there. It's hard and it requires energy. When people fight about decision, the one who's more stubborn very often wins. Or the one with higher status. Again, you haven't arrived at the truth. Exhausting the other person is not truth-seeking.
+
+> You shouldn't compromise when you can know the truth.
 
 ## Big things and paper cuts. Deliberately focus on both!
 
