--- a/en/_posts/2023-07-07-now230707.md
+++ b/en/_posts/2023-07-07-now230707.md
@@ -1,6 +1,6 @@
 ---
 tags: [now]
-cover: "now230707.jpg"
+img: "now230707.jpg"
 ---
 
 # On July 7 I am…
@@ -9,7 +9,7 @@ cover: "now230707.jpg"
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/{{ page.img }})
 
 > Note: this is my ["now page"](/now) where I share what I'm up to now.
 
