--- a/en/_posts/2023-10-13-now231013.md
+++ b/en/_posts/2023-10-13-now231013.md
@@ -1,6 +1,6 @@
 ---
 tags: [now]
-cover: "now231013.jpg"
+img: "now231013.jpg"
 m: https://social.nozbe.com/@michael/111229053301516815
 ---
 
@@ -10,7 +10,7 @@ I just came back from our annual [Nozbe Reunion](/reunion), this time in Katowic
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/{{ page.img }})
 
 > Note: this is my ["now page"](/now) where I share what I'm up to now.
 
