--- a/en/_posts/2023-12-25-now231225.md
+++ b/en/_posts/2023-12-25-now231225.md
@@ -1,6 +1,7 @@
 ---
 tags: [now]
 img: "now231225.jpg"
+m: https://social.nozbe.com/@michael/111646167698004399
 ---
 
 # On December 25 I am…
@@ -15,7 +16,7 @@ It’s Christmas Day! I’m back with my family celebrating Christmas, my parent
 
 ## Working on [Nozbe][n]:
 
-* After coining the [core values of Nozbe](/nozbe-values/) I finally figured out the positioning of [Nozbe][n] after diving deep into [Seth’s Marketing book and course][s]: *Nozbe helps SMART business owners achieve work-life balance in a simple way!* Who is a "SMART" business owner? Glad you asked! More answers soon…
+* After coining the [core values of Nozbe](/nozbe-values/) I finally figured out the positioning of [Nozbe][n] after diving deep into [Seth’s Marketing book and course](/marketing): *Nozbe helps SMART business owners achieve work-life balance in a simple way!* Who is a "SMART" business owner? Glad you asked! More answers soon…
 * I’m getting ready to start off the year with a brand new [10-steps to productivity webinar](/control-of-your-tasks/) for these SMART business owners (and their teams)! January and Ferbruary will be very exciting this way!
 * We’ve doubled our MRR (Monthly Recurring Revenue) of the new [Nozbe][n] last year and next year I’m planning to double it again! Lots of [essentialism](/essentialist) in our marketing and sales efforts will be required. I’m very excited!
 
