R2D2 and social images

--- a/en/_posts/2024-01-01-backpack24.md
+++ b/en/_posts/2024-01-01-backpack24.md
@@ -1,6 +1,7 @@
 ---
 tags: [featured,ipadonly,iphone,travel]
 cover: "backpack24.jpg"
+social: "backpack24.jpg"
 m: https://social.nozbe.com/@michael/111682734735301503
 ---
 
