--- a/en/_posts/2024-01-03-r2d2.md
+++ b/en/_posts/2024-01-03-r2d2.md
@@ -1,6 +1,7 @@
 ---
 tags: [lego]
 cover: "r2d2.jpg"
+social: "r2d2.jpg"
 ---
 
 # Building R2D2 Star Wars Lego robot which I got last Christmas
@@ -11,7 +12,7 @@ This past Christmas I got a very special [Lego](/lego) set which I won't reveal 
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
-## Christmas tradition
+## Christmas tradition of LEGO sets continues…
 
 [R2D2 Lego set](https://www.lego.com/en-us/product/r2-d2-75308) consists of 2314 bricks and is a cool replica of the [R2D2 Droid from Star Wars franchise](https://en.wikipedia.org/wiki/R2-D2). I announced my new build [on Instagram](https://www.instagram.com/p/CmmMPV_ImVX/) and got to work:
 
