updates to tags and nozbe17

--- a/en/_posts/2023-06-16-airtags.md
+++ b/en/_posts/2023-06-16-airtags.md
@@ -1,5 +1,5 @@
 ---
-tags: [apple,travel,featured]
+tags: [travel,apple,featured]
 cover: "airtags.jpg"
 m: https://social.nozbe.com/@michael/110555227460292085
 ---
