--- a/en/_posts/2023-10-16-journal3.md
+++ b/en/_posts/2023-10-16-journal3.md
@@ -1,5 +1,5 @@
 ---
-tags: [ipadonly,journal,shortcuts,featured]
+tags: [journal,ipadonly,shortcuts,featured]
 cover: "journal3.jpg"
 m: https://social.nozbe.com/@michael/111245803413531959
 ---
