--- a/en/_posts/2023-11-28-action.md
+++ b/en/_posts/2023-11-28-action.md
@@ -1,5 +1,5 @@
 ---
-tags: [featured,applewatch,iphone,shortcuts]
+tags: [applewatch,iphone,shortcuts,featured]
 cover: "action.jpg"
 m: https://social.nozbe.com/@michael/111488803621736790
 ---
