--- a/en/_posts/2023-12-21-day1.md
+++ b/en/_posts/2023-12-21-day1.md
@@ -1,5 +1,5 @@
 ---
-tags: [business,featured,video]
+tags: [business,video,featured]
 cover: "day1.jpg"
 m: https://social.nozbe.com/@michael/111619742703488626
 ---
