--- a/en/_posts/2024-01-01-backpack24.md
+++ b/en/_posts/2024-01-01-backpack24.md
@@ -1,5 +1,5 @@
 ---
-tags: [featured,ipadonly,iphone,travel]
+tags: [travel,ipadonly,iphone,featured]
 cover: "backpack24.jpg"
 social: "backpack24.jpg"
 m: https://social.nozbe.com/@michael/111682734735301503
