--- a/en/_posts/2024-01-30-2023.md
+++ b/en/_posts/2024-01-30-2023.md
@@ -1,5 +1,5 @@
 ---
-tags: [featured,year]
+tags: [year,featured]
 cover: "2023.jpg"
 social: "2023.jpg"
 m: https://social.nozbe.com/@michael/111845293736343211
