--- a/en/_posts/2023-02-01-nozbe16.md
+++ b/en/_posts/2023-02-01-nozbe16.md
@@ -1,5 +1,5 @@
 ---
-tags: [business,nozbe,featured]
+tags: [nozbe,business,featured]
 cover: "nozbe16.jpg"
 l: https://www.linkedin.com/pulse/sweet-sixteen-nozbe-why-im-still-excited-business-ive-sliwinski
 t: https://twitter.com/MSliwinski/status/1620809168591650818
