--- a/en/_posts/2023-05-04-office23flip.md
+++ b/en/_posts/2023-05-04-office23flip.md
@@ -1,5 +1,5 @@
 ---
-tags: [ipadonly,office,featured]
+tags: [office,ipadonly,featured]
 cover: "office23flip.jpg"
 m: https://social.nozbe.com/@michael/110311041650714240
 ---
