--- a/en/_posts/2023-11-23-laptop.md
+++ b/en/_posts/2023-11-23-laptop.md
@@ -1,5 +1,5 @@
 ---
-tags: [featured,computers]
+tags: [computers,featured]
 cover: "laptop.jpg"
 m: https://social.nozbe.com/@michael/111460255066026679
 ---
