--- a/en/_posts/2023-11-27-nozbe-add.md
+++ b/en/_posts/2023-11-27-nozbe-add.md
@@ -1,5 +1,5 @@
 ---
-tags: [nozbe,shortcuts]
+tags: [shortcuts,nozbe]
 cover: "nozbe-add.jpg"
 m: https://social.nozbe.com/@michael/111483847769235990
 ---
