--- a/en/_posts/2023-12-13-smsnote.md
+++ b/en/_posts/2023-12-13-smsnote.md
@@ -1,5 +1,5 @@
 ---
-tags: [short,applewatch,shortcuts]
+tags: [shortcuts,applewatch,short]
 cover: smsnote.jpg
 m: https://seths.blog/2023/12/eight-marketing-maxims/
 ---
