--- a/en/_posts/2024-02-06-nozbe17.md
+++ b/en/_posts/2024-02-06-nozbe17.md
@@ -4,7 +4,7 @@ cover: "nozbe17.jpg"
 social: "nozbe17.jpg"
 ---
 
-# Nozbe - app for SMART business owners and their teams - turns 17!
+# Nozbe - app for SMART business owners and teams - turns 17!
 
 Last week, on February 1, [Nozbe][n] turned 17 years old and as I reflect over these last years I'd like to dig deeper into who is [Nozbe](/nozbe/) really for? While working with [Seth Godin's marketing book](/marketing/) I was thinking how to really convey to our current and future customers what we as [Nozbe](/nozbe/) believe in. What's our **why**? Because [*people don't buy what you do, they buy why you do it*](/start-with-why-by-simon-sinek-audio-book-of-t/). Not only our [core values](/nozbe-values/) but also how we work, how we're [remote first](/nooffice/), we [don't use email](/emailban/) to collaborate, or have [very few meetings](/noofficefm-17/). How to create this tension and play with status. How to say that **people like us do things like this**. Being a productivity nerd and loving the SMART acronym for goal setting, I decided to piggy-back on it and create my own way.
 
