--- a/en/_posts/2024-02-09-glasses.md
+++ b/en/_posts/2024-02-09-glasses.md
@@ -2,6 +2,7 @@
 tags: [life]
 cover: "glasses.jpg"
 social: "glasses.jpg"
+m: https://social.nozbe.com/@michael/111901679853721815
 ---
 
 # Time for reading glasses
@@ -28,7 +29,7 @@ Third, you don't want to be wearing them all the time, because when looking away
 
 So basically you have to be putting them on and off all the time. Which is a little annoying. I know, first world problems.
 
-## I got two pairs of glasses 👓 
+## I got two pairs of glasses 👓👓
 
 The shops always give you this deal that if you buy one pair of glasses, you pay X, but if you get two, you pay 1.5X for two or less. [Much like how we priced the new "Nozbe Business" plan](https://nozbe.com/free/?c=michaelteam).
 
