--- a/en/_posts/2024-02-20-q7.md
+++ b/en/_posts/2024-02-20-q7.md
@@ -51,7 +51,7 @@ For longer drives you also appreciate quietness in the car. So I chose the optio
 
 The added bonus, which I didn't know about, was that this means you have essentially a double glass with a plexiglass in between, so nobody can break into your car! I know this, because once some thugs tried it and broke the first outside glass but couldn't break the plexiglass and get in so they just gave up. This is an added security feature!
 
-## 6. Matrix LED lights help me see things at night 💡
+## 6. Matrix LED lights help see at night 💡
 
 When I was configuring the car, this option was very expensive and I didn't want to choose it, but my friend Robert, an automotive expert, talked me into it. He basically told me: *If there is any option you must choose, it's this!* - and I'm glad he did.
 
@@ -59,7 +59,7 @@ When I was configuring the car, this option was very expensive and I didn't want
 
 These special Matrix LED lights let me drive with full long beams all the time at night. They adjust to the environment and turn off only parts of them as not to blind other drivers, but illuminate the rest of the road so I can see everything perfectly. As a family, very often we drive back home late at night, so again, it's an added security feature and lets us drive at night calmly.
 
-## 7. It's a 7-seater for our entire family and guests 💺
+## 7. It's a 7-seater for family and guests 💺
 
 We are a family of 5. When we took ownership of the car, my youngest wasn't even a 1 year old! We knew that we had to have additional seats if we ever intended to travel with someone else. When my parents visit, we love being able to all fit into one car and go on our road trips!
 
@@ -79,7 +79,7 @@ Lastly, what I really like about this car is that despite being a big SUV, it fe
 
 It's a joy to dive.
 
-## Happy 7 and many more years of your service!
+## Happy 7 and many more of service!
 
 I'm not a kind of person that changes a car every few years, especially that I work from home so I don't use a car to commute to an office. However, I'm very happy that after 7 years this car still brings me and my family lots of happiness. It lets us enjoy fun holidays and motivates us to keep coming up with ideas for weekend trips.
 
