--- a/en/_posts/2024-02-20-q7.md
+++ b/en/_posts/2024-02-20-q7.md
@@ -6,7 +6,7 @@ social: "q7.jpg"
 
 # My family car turns 7 today and there are 7 things I still find awesome about it
 
-Exactly 7 years ago today, I took ownership of my first ever new car. I remember being very apprehensive about getting such an expensive car, even though I had a unique opportunity of getting it at significant discount. I was studying its price list very diligently trying to find the perfect balance of specs, extras and value for money. Turns out, this car has aged exceedingly well and not only do I keep driving my family in it today, but we are immensely enjoying it. Here are 7 outstanding features that I still enjoy after 7 years of ownership of my red Audi Q7:
+Exactly 7 years ago today, I took ownership of my first ever new car. I remember being very apprehensive about getting such an expensive car, even though I had a unique opportunity of getting it at significant discount. I was studying its price list very diligently trying to find the perfect balance of specs, extras and value for money. Turns out, this car has aged exceedingly well and not only do I keep driving my family in it today, but we are immensely enjoying it. Here are 7 outstanding features that I still enjoy after 7 years of ownership of Audi Q7:
 
 <!--More-->
 
