fixes and updates to cuts

--- a/en/_posts/2023-10-16-journal3.md
+++ b/en/_posts/2023-10-16-journal3.md
@@ -50,7 +50,7 @@ I've also prepared translated versions:
 
 This additional Siri Shortcut is very simple and just adds the *planning* functionality to the main Journal 3.0 Shortcut. It isn't supposed to be run separately. You still keep using just the main journaling Siri Shortcut.
 
-I've also added a simple ["Open Today"][j3o] Siri Shortcut to open today's day with just one click. I keep this shortcut on my home screen in a widget. Here's Spanish 🇪🇸 ["Abrir Hoy"][j3eso] and Polish 🇵🇱["Otwórz Dziś"]][j3plm].
+I've also added a simple ["Open Today"][j3o] Siri Shortcut to open today's day with just one click. I keep this shortcut on my home screen in a widget. Here's Spanish 🇪🇸 ["Abrir Hoy"][j3eso] and Polish 🇵🇱["Otwórz Dziś"][j3plm].
 
 ## Additional improvements - simplified dates, modularity, calendar review and better main menu
 
