--- a/en/_posts/2024-03-06-michaels.md
+++ b/en/_posts/2024-03-06-michaels.md
@@ -26,18 +26,16 @@ That's why I recorded this:
 
 First I started with a script:
 
-> Old-school Michael: Hey, what are you doing?
-> Modern Michael: Psst, I'm on a meeting!
-> O: But it's not a real meeting. It's a virtual meeting. 
-> M: Yeah, virtual or not, believe me we're having a meeting and we're discussing design of our [Nozbe][n] app
-> O: Yeah, but it's not real, 'cause you cannot see the body language and the subtleties…
-> M: Maybe, but we're discussing real design issues and you're bothering us. Is this guy bothering you, guys?
-> Virtual Meeting People: Yes!
-> O: Well, I still don't believe in virtual meetings!
-> M: There's nothing to believe. Virtual meetings or "real meetings"… We are having a meeting and you're disturbing us, so… bye!
-> O: OK, bye! (Discouraged)
-
-![{{ page.title }} two](/img/michaels-two.jpg)
+> **Old-school Michael:** Hey, what are you doing?\\
+> **Modern Michael:** Psst, I'm on a meeting!\\
+> **O:** But it's not a real meeting. It's a virtual meeting.\\
+> **M:** Yeah, virtual or not, believe me we're having a meeting and we're discussing design of our [Nozbe][n] app.\\
+> **O:** Yeah, but it's not real, 'cause you cannot see the body language and the subtleties…\\
+> **M:** Maybe, but we're discussing real design issues and you're bothering us. Is this guy bothering you, guys?\\
+> Virtual Meeting People: Yes!\\
+> **O:** Well, I still don't believe in virtual meetings!\\
+> **M:** There's nothing to believe. Virtual meetings or "real meetings"… We are having a meeting and you're disturbing us, so… bye!\\
+> **O:** OK, bye!😢
 
 Coming up with this wasn't difficult. I've had countless similar discussions with people for the last [17 years](/nozbe17/) and they still don't *believe* in virtual meetings. And at [Nozbe we do virtual meetings all the time](https://nozbe.com/meetings?c=michaelteam) and they are: [regular, optional and well prepared](https://NoOffice.org/meetings/).
 
@@ -45,8 +43,10 @@ Coming up with this wasn't difficult. I've had countless similar discussions wit
 
 Now comes the fun part. To make sure it works, I had to convince my colleagues to take part in the recording. Here are the things I paid attention to:
 
-- *Modern Michael* has casual clothes (a hoodie), [glasses](/glasses/) and is looking away from the camera - to the side.
-- *Old-school Michael* has an elegant shirt, no glasses and is looking straight at the camera.
+![{{ page.title }} two](/img/michaels-two.jpg)
+
+- **Modern Michael** has casual clothes (a hoodie), [glasses](/glasses/) and is looking away from the camera - to the side.
+- **Old-school Michael** has an elegant shirt, no glasses and is looking straight at the camera.
 
 I had to record all *Modern Michael* parts first, including my friends shouting from the screen. Then I changed, stood up and recorded *Old-school Michael*.
 
