--- a/en/_posts/2024-03-06-michaels.md
+++ b/en/_posts/2024-03-06-michaels.md
@@ -45,8 +45,8 @@ Now comes the fun part. To make sure it works, I had to convince my colleagues t
 
 ![{{ page.title }} two](/img/michaels-two.jpg)
 
-- **Modern Michael** has casual clothes (a hoodie), [glasses](/glasses/) and is looking away from the camera - to the side.
 - **Old-school Michael** has an elegant shirt, no glasses and is looking straight at the camera.
+- **Modern Michael** has casual clothes (a hoodie), [glasses](/glasses/) and is looking away from the camera - to the side.
 
 I had to record all *Modern Michael* parts first, including my friends shouting from the screen. Then I changed, stood up and recorded *Old-school Michael*.
 
@@ -60,12 +60,13 @@ Once the video was ready and below 1 minute, I exported it and posted first to m
 
 And yes, if you've made this far, you should totally follow me there! 👊
 
-## The original inspiration came from Ryan George
+## The original inspiration by Ryan George
 
 Here's the 100th video of Pitch Meetings that inspired me to give the concept of *Two Michaels* a try:
 
 {% include video.html id="OEaSnmf1JwY" %}
 
+I still need to work on my catch-phrases…
 
 [i]: https://michael.gratis/ig
 [y]: https://michael.gratis/y
