--- a/en/_posts/2023-05-03-pouch.md
+++ b/en/_posts/2023-05-03-pouch.md
@@ -1,5 +1,5 @@
 ---
-tags: [ipadonly,iphone,travel]
+tags: [gadgets,travel]
 cover: "pouch.jpg"
 m: https://social.nozbe.com/@michael/110306086062197816
 ---
@@ -16,6 +16,8 @@ Two years ago [I posted the contents of my backpack](/backpack/) and all the tec
 {:toc}
 
 ## Travel tech pouch
+
+**Update in 2024**: [I updated my travel pouch in 2024 as I moved to the USB-C lifestyle](/backpack24/)
 
 Recently I've been traveling much more and very often I'm on the road with either just my wife or with my entire family, so I realized I needed a bigger tech pouch with more cables and I bought:
 
