--- a/en/_posts/2023-06-22-ergo.md
+++ b/en/_posts/2023-06-22-ergo.md
@@ -1,5 +1,5 @@
 ---
-tags: [computers,lego]
+tags: [gadgets,computers,lego]
 cover: "ergo.jpg"
 m: https://social.nozbe.com/@michael/110586900369450801
 ---
