--- a/en/_posts/2024-02-09-glasses.md
+++ b/en/_posts/2024-02-09-glasses.md
@@ -1,5 +1,5 @@
 ---
-tags: [life]
+tags: [life,gadgets]
 cover: "glasses.jpg"
 social: "glasses.jpg"
 m: https://social.nozbe.com/@michael/111901679853721815
