--- a/en/_posts/2021-03-01-backpack.md
+++ b/en/_posts/2021-03-01-backpack.md
@@ -1,5 +1,5 @@
 ---
-tags: [ipadonly,iphone]
+tags: [gadgets, travel]
 cover: "backpack.jpg"
 ---
 
@@ -15,6 +15,8 @@ Despite the [pandemic](/covid) and lack of long-haul travel, I’m still using m
 ## What's in my backpack in 2021?
 
 I did a long video review of my backpack contents [more than two years ago with Radek on episode 162 of The Podcast](/podcast-162/) so make sure to check it out. However, since then I've changed, updated and simplified my setup.
+
+**Update in 2024**: [There is a new backpack and updated travel pouch](/backpack24/).
 
 ### New backpack - Fjällräven Ulvö 23
 
