--- a/en/_posts/2024-02-20-q7.md
+++ b/en/_posts/2024-02-20-q7.md
@@ -1,5 +1,5 @@
 ---
-tags: [life,travel,featured]
+tags: [life,travel,gadgets,featured]
 cover: "q7.jpg"
 social: "q7.jpg"
 m: https://social.nozbe.com/@michael/111969133007409963
